Add public code route
